--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 ---
 layout: mylayout.njk
-title: Est-ce qu'on commence un truc maintenant ?
-test: coucou ma gueule
 ---
 <br /><br />
 <center>
 	<h2>
 		Tu as vu l'heure ?<br />
-		On va pas commencer un truc maintenant 🤷‍♂️
+		On va pas commencer un truc maintenant 🤷‍♂️<br/>
+		Ce serait indécent de commencer un truc maintenant...<br /><br />
+
+		<img src="https://i.kym-cdn.com/photos/images/original/001/495/284/105.png" />
 	</h2>
 </center>
