--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
----
-layout: mylayout.njk
----
-<br /><br />
-<center>
-	<h2>
-		Tu as vu l'heure ?<br />
-		On va pas commencer un truc maintenant 🤷‍♂️<br/>
-		Ce serait indécent de commencer un truc maintenant...<br /><br />
+<!doctype html>
+<html lang="en" style="height: 100%;margin: 0; padding: 0;">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Est-ce qu'on commence un truc maintenant ?</title>
+  </head>
+  <body><br /><br />
 
-		<img src="https://i.kym-cdn.com/photos/images/original/001/495/284/105.png" />
-	</h2>
-</center>
+
+		<center>
+			<h2>
+				Tu as vu l'heure ?<br />
+				On va pas commencer un truc maintenant 🤷‍♂️<br/>
+				<!--Ce serait indécent de commencer un truc maintenant...--><br /><br />
+
+				<img src="https://i.kym-cdn.com/photos/images/original/001/495/284/105.png" />
+			</h2>
+		</center>
+	</body>
+</html>
