--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<center>
 			<h2>
 				Tu as vu l'heure ?<br />
-				On va pas commencer un truc maintenant 🤷‍♂️<br/>
+				On ne va pas commencer un truc maintenant 🤷‍♂️<br/>
 				<!--Ce serait indécent de commencer un truc maintenant...--><br /><br />
 
 				<img src="https://i.kym-cdn.com/photos/images/original/001/495/284/105.png" />
