--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 		<center>
 			<h2>
-				Tu as vu l'heure ?<br />
-				On ne va pas commencer un truc maintenant 🤷‍♂️<br/>
+				<div id="content">Tu as vu l'heure ?<br />
+				On ne va pas commencer un truc maintenant 🤷‍♂️<br/></div>
 				<!--Ce serait indécent de commencer un truc maintenant...--><br /><br />
 
 				<img src="https://i.kym-cdn.com/photos/images/original/001/495/284/105.png" />
