--- a/index.html
+++ b/index.html
@@ -4,28 +4,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Est-ce qu'on commence un truc maintenant ?</title>
-    <style>
-    	@keyframes rotation {
-		  from {
-		    transform: rotate(0deg);
-		  }
-		  to {
-		    transform: rotate(359deg);
-		  }
-		}
-	</style>
   </head>
   <body><br /><br />
-
-
 		<center>
 			<h2>
 				<div id="content">Tu as vu l'heure ?<br />
 				On ne va pas commencer un truc maintenant 🤷‍♂️<br/></div>
-				<!--Ce serait indécent de commencer un truc maintenant...--><br /><br />
+				<!--Ce serait indécent de commencer un truc maintenant, non ?...--><br /><br />
 
 				<img src="https://i.kym-cdn.com/photos/images/original/001/495/284/105.png"
-				style="animation: rotation 2.5s infinite linear;width:150px;display:none;" />
+				style="animation: rotation 2.5s infinite linear;width:150px;" />
 			</h2>
 		</center>
 	</body>
