feat: add GTag and favicon

--- a/index.html
+++ b/index.html
@@ -4,17 +4,47 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Est-ce qu'on commence un truc maintenant ?</title>
-  </head>
-  <body><br /><br />
-		<center>
-			<h2>
-				<div id="content">Tu as vu l'heure ?<br />
-				On ne va pas commencer un truc maintenant 🤷‍♂️<br/></div>
-				<!--Ce serait indécent de commencer un truc maintenant, non ?...--><br /><br />
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+    <style type="text/css">
+    	#bottom {
+    		position:absolute;
+		    width:300px;
+		    height:150px;
+		    bottom:0px;
+		    right:25%;
+		    left:50%;
+		    margin-left:-150px;
+    	}
+    	body {
+    		padding-top: 30px;
+    	}
+    </style>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-WFFQL27GVM"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
 
-				<img src="https://i.kym-cdn.com/photos/images/original/001/495/284/105.png"
-				style="animation: rotation 2.5s infinite linear;width:150px;" />
-			</h2>
-		</center>
+	  gtag('config', 'G-WFFQL27GVM');
+	</script>
+  </head>
+  <body>
+  	<center>
+		<h2>
+			Tu as vu l'heure ?<br />
+			On ne va pas commencer un truc maintenant 🤷‍♂️<br/>
+		</h2>
+			
+		<!--Ce serait indécent de commencer un truc maintenant, non ?...-->
+
+		<div id="bottom">
+			<img src="favicon.png" style="width:150px;" /><br />
+			<div>
+				
+				<a href="https://twitter.com/tpoulain" target="_blank">@tpoulain<img src="https://abs.twimg.com/favicons/twitter.ico" style="width: 16px;vertical-align: middle;" /></a> - 2021
+			</div>
+		</div>
+	</center>
 	</body>
 </html>
